/*
  CarStandFCOOL API

  An API for managing a cloud-based car dealership service

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Inspection {

  int32 inspectionId = 1;

  int32 inspectionCarId = 2;

  // inspection status
  enum InspectionStatusEnum {
    InspectionStatusEnum_UNKNOWN = 0;
    InspectionStatusEnum_ONGOING = 1;
    InspectionStatusEnum_FINISHED = 2;
  }

  InspectionStatusEnum inspectionStatus = 3;

  string inspectionClientNotes = 4;

  string inspectionStaffNotes = 5;

  double inspectionCost = 6;

  string inspectionStartDate = 7;

  string inspectionEndDate = 8;

}
