/*
  CarStandFCOOL API

  An API for managing a cloud-based car dealership service

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Transaction {

  // Unique transaction ID
  int32 transactionId = 1;

  // ID of the user who made the transaction
  int32 buyerId = 2;

  // ID of the car involved in the transaction
  int32 carId = 3;

  // Type of transaction (Rent or Buy)
  enum TypeEnum {
    TypeEnum_UNKNOWN = 0;
    TypeEnum_RENT = 1;
    TypeEnum_BUY = 2;
  }

  TypeEnum type = 4;

  // Total amount of the transaction
  double totalAmount = 5;

  // Current status of the transaction
  enum StatusEnum {
    StatusEnum_UNKNOWN = 0;
    StatusEnum_PENDING = 1;
    StatusEnum_COMPLETED = 2;
    StatusEnum_CANCELED = 3;
  }

  StatusEnum status = 6;

  // Date and time when the transaction occurred
  string transactionDate = 7;

  // End date (if rented), null if bought
  string endDate = 8;

}
